fix the main wrap content

--- a/style/style.css
+++ b/style/style.css
@@ -20,3 +20,4 @@ main{       min-height: 500px;}
 header, main, footer{ width: 1200px; background: #EFEFEF;  margin: 10px auto; border: 2px solid #999; border-radius: 7px;}
 footer .wrap h1{font-size: 28px; color: #555; margin: 16px 0 0 0;}
 footer .wrap p{ font-size: 14px; color: #555; margin: 0 0 20px 0;}
+main .wrap{ padding: 7px;}
